# policy-scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  opencode.jsonc  policy-scout-relay.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
docs/: AGENT_HANDOFF.md  APPROVAL_QUEUE_DESIGN.md  ARCHITECTURE.md  AUDIT_AND_REPORTING.md  CLI.md  CLI_SPEC.md  COMMAND_CLASSIFIER_DESIGN.md  COMMIT_AND_BUMP_GATE.md  DATA_MODELS.md  DECISION_MATRICES.md  DIAGRAM_INVENTORY.md  DIAGRAM_MANIFEST.md  DIAGRAM_RENDERING_GUIDE.md  DOC_INDEX.md  EVALUATION_GRANULARITY.md  EXAMPLE_SCENARIOS.md  GLOSSARY_AND_CONVENTIONS.md  GRAPH_EXPORT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INTEGRATION_BOUNDARIES.md  LOCAL_ALPHA_RELEASE_CHECKLIST.md  LOCAL_FIRST_AND_PRIVACY.md  MERMAID_DIAGRAMS.md  MVP_SPEC.md  POLICY_DESIGN.md  PROJECT_SCOPE.md  README.md  REGISTRY_DESIGN.md  RISK_SCORING_AND_CLUTCH.md  ROADMAP.md  SANDBOX_DESIGN.md  SCENARIO_CARDS.md  SCOUT_REPORT_ANATOMY.md  SECURITY_MODEL.md  SWEEP_ENGINE_DESIGN.md  TAXONOMIES.md  TESTING_STRATEGY.md  THREAT_MODEL.md  (+4 more)
policy_scout/: __init__.py  data_cleanup.py  data_status.py  demo.py  doctor.py
scripts/: generate_registry_manifest.py
tests/: __init__.py  conftest.py  test_approval_execution.py  test_approval_models.py  test_approval_store.py  test_audit_chain.py  test_audit_cli.py  test_audit_events.py  test_audit_redaction.py  test_audit_sqlite_store.py  test_canary.py  test_classifier.py  test_cli_approvals.py  test_cli_audit.py  test_cli_audit_sqlite.py  test_cli_check.py  (+64 more)
(+353 files in other folders)
