[project]
name = "policy-scout"
version = "0.3.9"
description = "Local-first safety harness for agent commands, package installs, and suspicious project activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.0",
    "fossic @ git+https://github.com/bitmosh/fossic.git#subdirectory=fossic-py",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[project.scripts]
policy-scout = "policy_scout.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "no_policy_isolation: opt out of the autouse find_project_config patch (for tests that exercise the loading machinery directly)",
]
